--- a/charnpredictioncustumer.ipynb
+++ b/charnpredictioncustumer.ipynb
@@ -52,6 +52,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "import data\n"
+      ],
+      "metadata": {
+        "id": "0JiPWpLV44rL"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -1209,6 +1218,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "display info"
+      ],
+      "metadata": {
+        "id": "BNCkYWa548nz"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
@@ -1671,6 +1689,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Missing or null values"
+      ],
+      "metadata": {
+        "id": "ytQTnj4V4_qi"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
@@ -1821,6 +1848,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Display the percentage of missing values"
+      ],
+      "metadata": {
+        "id": "quEuG5og5DtQ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
@@ -1845,6 +1881,15 @@
       "source": [
         "df.isnull().sum().mean()*100,2"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Drop the datas"
+      ],
+      "metadata": {
+        "id": "2bORLKo15IhU"
+      }
     },
     {
       "cell_type": "code",
@@ -2362,6 +2407,15 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fill the null values with mean"
+      ],
+      "metadata": {
+        "id": "bXxbZMH85Lmh"
+      }
     },
     {
       "cell_type": "code",
@@ -3890,6 +3944,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Display skewness"
+      ],
+      "metadata": {
+        "id": "Ma-yJOqQ5S1e"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "nu.skew()"
@@ -3987,6 +4050,15 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DATA VISUALIZATION"
+      ],
+      "metadata": {
+        "id": "dU-h_Z9p5XE2"
+      }
     },
     {
       "cell_type": "code",
@@ -4135,6 +4207,15 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Out Lier removal method"
+      ],
+      "metadata": {
+        "id": "cgPLjcio5bAe"
+      }
     },
     {
       "cell_type": "code",
@@ -4704,6 +4785,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Histplot"
+      ],
+      "metadata": {
+        "id": "ldF5k6bn5hUh"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 28,
       "metadata": {
@@ -4765,6 +4855,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " Scatterplot"
+      ],
+      "metadata": {
+        "id": "yd6WFX4B5kK_"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 30,
       "metadata": {
@@ -4807,6 +4906,15 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Resample method to balance 0 and 1"
+      ],
+      "metadata": {
+        "id": "FILG8ob_5nV3"
+      }
     },
     {
       "cell_type": "code",
@@ -5422,6 +5530,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Label Encoding"
+      ],
+      "metadata": {
+        "id": "HmgY2spu5tgV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -5941,6 +6058,15 @@
           "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Onehot Encoding"
+      ],
+      "metadata": {
+        "id": "MOF51Ona5xZx"
+      }
     },
     {
       "cell_type": "code",
@@ -6512,6 +6638,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Balanced data"
+      ],
+      "metadata": {
+        "id": "JMY30a6s51JX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_balanced['Exited'].value_counts()"
@@ -6579,6 +6714,15 @@
           "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Split data into x and y"
+      ],
+      "metadata": {
+        "id": "e_itSj8f53n_"
+      }
     },
     {
       "cell_type": "code",
@@ -7244,6 +7388,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Standard scale x variables"
+      ],
+      "metadata": {
+        "id": "AJhxgPTK58Ih"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 41,
       "metadata": {
@@ -7371,6 +7524,15 @@
       "source": [
         "y_test.shape"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LOGISTICS REGRESSION"
+      ],
+      "metadata": {
+        "id": "EO8t5O_36A_A"
+      }
     },
     {
       "cell_type": "code",
@@ -8728,7 +8890,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgX+wf8LA1+XPweml2JiMt",
+      "authorship_tag": "ABX9TyNLyl/TN+xLUO9PvNWLQQ0h",
       "include_colab_link": true
     },
     "kernelspec": {
